adding game validadtion
