# api/http/validation/validation.go
@@ -3,6 +3,7 @@ package validation
 import (
 	"regexp"
 
+	"github.com/bradley-adams/gainline/http/api"
 	"github.com/go-playground/validator/v10"
 	"github.com/google/uuid"
 )
@@ -28,4 +29,49 @@ func ValidateUniqueUUIDs(fl validator.FieldLevel) bool {
 		seen[t] = true
 	}
 	return true
+}
+
+func ValidateGameStatus(fl validator.FieldLevel) bool {
+	status, ok := fl.Field().Interface().(api.GameStatus)
+	if !ok {
+		return false
+	}
+
+	switch status {
+	case api.GameStatusScheduled, api.GameStatusPlaying, api.GameStatusFinished, "":
+		return true
+	default:
+		return false
+	}
+}
+
+func ValidateGameStruct(sl validator.StructLevel) {
+	game := sl.Current().Interface().(api.GameRequest)
+
+	// Teams must be different
+	if game.HomeTeamID == game.AwayTeamID {
+		sl.ReportError(game.HomeTeamID, "HomeTeamID", "home_team_id", "home_and_away_teams_must_differ", "")
+		sl.ReportError(game.AwayTeamID, "AwayTeamID", "away_team_id", "home_and_away_teams_must_differ", "")
+	}
+
+	// Scheduled games must NOT have scores
+	if game.Status == api.GameStatusScheduled && (game.HomeScore != nil || game.AwayScore != nil) {
+		sl.ReportError(game.HomeScore, "HomeScore", "home_score", "no_scores_for_scheduled_games", "")
+		sl.ReportError(game.AwayScore, "AwayScore", "away_score", "no_scores_for_scheduled_games", "")
+	}
+
+	// Playing or Finished games must have scores
+	if (game.Status == api.GameStatusPlaying || game.Status == api.GameStatusFinished) &&
+		(game.HomeScore == nil || game.AwayScore == nil) {
+		sl.ReportError(game.HomeScore, "HomeScore", "home_score", "scores_required_for_playing_or_finished_games", "")
+		sl.ReportError(game.AwayScore, "AwayScore", "away_score", "scores_required_for_playing_or_finished_games", "")
+	}
+
+	// Scores cannot be negative
+	if game.HomeScore != nil && *game.HomeScore < 0 {
+		sl.ReportError(game.HomeScore, "HomeScore", "home_score", "scores_cannot_be_negative", "")
+	}
+	if game.AwayScore != nil && *game.AwayScore < 0 {
+		sl.ReportError(game.AwayScore, "AwayScore", "away_score", "scores_cannot_be_negative", "")
+	}
 }
